added github link

--- a/contribute.html
+++ b/contribute.html
@@ -45,8 +45,8 @@
                 <img src="images/github-contribute.png" id="github-contribute-icon" alt="">
                 <img src="images/hashcut-org.jpeg" id="hashcut-icon" alt="">
             </div>
-            <button name="https://developer.chrome.com/docs/extensions/mv2/manifest/icons/" type="button"
-                class="btn btn-outline-dark links" id="contribute-btn">Contribute!</button>
+            <button name="https://github.com/HASHCUT69/Blend-n-Run" type="button" class="btn btn-outline-dark links"
+                id="contribute-btn">Contribute!</button>
             <footer class="text-muted1">
                 <cite title="About Us">
                     <img src="images/linkedin.png" class="linkedin-icon" alt="">
