--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="images/github-contribute.png" id="github-icon" alt="contribute!">
             </a>
             <div class="card-body text-center" width="250px">
-                <textarea class="form-control" id="content" placeholder="Enter Your Code Here."></textarea>
+                <textarea class="form-control" id="content" placeholder="Enter Your Text/Code Here."></textarea>
 
                 <p class="card-text">
                     <button type="button" class="btn btn-outline-dark" id="run-script-btn">Copy</button>
