--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <div class="content-box main">
         <div class="card text-center container-1">
+
             <div class="card-header">
                 <img src="images/B.gif" class="icon" alt="logo">
             </div>
@@ -32,14 +33,27 @@
             </a>
             <div class="card-body text-center" width="250px">
                 <textarea class="form-control" id="content" placeholder="Enter Your Text/Code Here."></textarea>
+                <div>
+                    <cite
+                        title="v1.0.0.0&#013;-Added Mac Support&#013;(use ctrl+shift+x on Mac)&#013;-Added Visual Changes">
+                        <p class="profile-links links whats-new">
 
+                            What's new?
+                        </p>
+                    </cite>
+                </div>
                 <p class="card-text">
                     <button type="button" class="btn btn-outline-dark" id="run-script-btn">Copy</button>
                     <br>
                     <span class="copyAlert">Copied!</span>
                     <br> Press
-                    <span class="badge b1 text-bg-secondary">ALT</span> + <span
-                        class="badge b1 text-bg-secondary">X</span>
+                    <span class="badge b1 text-bg-secondary badge-btn">ALT</span> + <span
+                        class="badge b1 text-bg-secondary badge-btn">X</span>
+                    /
+                    <span class="badge b1 text-bg-secondary badge-btn">CTRL</span> + <span
+                        class="badge b1 text-bg-secondary badge-btn">SHIFT</span> + <span
+                        class="badge b1 text-bg-secondary badge-btn">X</span>
+                    <br>
                     to
                     paste the code.
                 </p>
