--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <script src="billiliteRange\bililiteRange\bililiteRange.undo.js"></script>
     <script src="billiliteRange\bililiteRange\bililiteRange.lines.js"></script>
     <script src="billiliteRange\bililiteRange\jquery.sendkeys.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <title>Just Paste it!</title>
 </head>
@@ -28,14 +26,14 @@
                 <img src="images/B.gif" class="icon" alt="logo">
             </div>
             <a class="contribute" href="contribute.html">
-                <span class="badge b3 text-bg-secondary">Contribute!</span>
+                <span class="b3">Contribute!</span>
                 <img src="images/github-contribute.png" id="github-icon" alt="contribute!">
             </a>
             <div class="card-body text-center" width="250px">
                 <textarea class="form-control" id="content" placeholder="Enter Your Text/Code Here."></textarea>
                 <div>
                     <cite
-                        title="v1.0.0.0&#013;-Added Mac Support&#013;(use ctrl+shift+x on Mac)&#013;-Added Visual Changes">
+                        title="v2.0.0.0&#013;-Added Mac Support&#013;(use ctrl+shift+x on Mac)&#013;-Added Visual Changes&#013;-Removed external styling">
                         <p class="profile-links links whats-new">
 
                             What's new?
@@ -45,20 +43,26 @@
                 <p class="card-text">
                     <button type="button" class="btn btn-outline-dark" id="run-script-btn">Copy</button>
                     <br>
-                    <span class="copyAlert">Copied!</span>
-                    <br> Press
-                    <span class="badge b1 text-bg-secondary badge-btn">ALT</span> + <span
-                        class="badge b1 text-bg-secondary badge-btn">X</span>
+                <div class="copyAlert">Copied!</div>
+                <p class="short-cuts">
+
+                    Press
+                    <span class="badge">ALT</span> + <span class="badge">X</span>
                     /
-                    <span class="badge b1 text-bg-secondary badge-btn">CTRL</span> + <span
-                        class="badge b1 text-bg-secondary badge-btn">SHIFT</span> + <span
-                        class="badge b1 text-bg-secondary badge-btn">X</span>
-                    <br>
-                    to
-                    paste the code.
+                    <span class="badge">CTRL</span> + <span class="badge">SHIFT</span> + <span class="badge">X</span>
+                    <br><br>
+                    to paste the code.
+                </p>
+
+
+
                 </p>
             </div>
-            <footer class="blockquote-footer"><cite title="About Us">Developed by
+            <footer class="blockquote-footer"><cite title="About Us">
+                    <span class="muted">
+
+                        Developed by
+                    </span>
                     <a name="https://www.linkedin.com/in/sandeep-pani/" href="" class="profile-links links">Sandeep
                         Pani</a> ,
                     <a name="https://www.linkedin.com/in/sathvik-achanta/" href="" class="profile-links links">Sathvik
@@ -70,10 +74,6 @@
             </footer>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
-        </script>
 </body>
 
 </html>
