--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="jquery/jquery-3.6.1.min.js"></script>
+    <script src="dependencies/jquery/jquery-3.6.1.min.js"></script>
     <script src="scripts/script.js"></script>
     <script src="billiliteRange\bililiteRange\bililiteRange.js"></script>
     <script src="billiliteRange\bililiteRange\bililiteRange.undo.js"></script>
     <script src="billiliteRange\bililiteRange\bililiteRange.lines.js"></script>
     <script src="billiliteRange\bililiteRange\jquery.sendkeys.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="dependencies/bootstrap-5.2.3-dist/bootstrap-5.2.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Just Paste it!</title>
 </head>
 
 <body>
     <script src="scripts/popup.js"></script>
-
+    <script src="dependencies/bootstrap-5.2.3-dist/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
     <div class="content-box main">
         <div class="card text-center container-1">
 
@@ -70,10 +69,6 @@
             </footer>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
-        </script>
 </body>
 
 </html>
