--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <textarea class="form-control" id="content" placeholder="Enter Your Text/Code Here."></textarea>
                 <div>
                     <cite
-                        title="v1.0.0.0&#013;-Added Mac Support&#013;(use ctrl+shift+x on Mac)&#013;-Added Visual Changes">
+                        title="v1.0.0.1&#013;-Added Mac Support&#013;(use ctrl+shift+x on Mac)&#013;-Added Visual Changes&#013;-Fixed minor bugs">
                         <p class="profile-links links whats-new">
 
                             What's new?
