--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div>
                     <cite
                         title="v1.0.0.1&#013;-Added Mac Support&#013;(use ctrl+shift+x on Mac)&#013;-Added Visual Changes&#013;-Fixed minor bugs">
-                        <p class="profile-links links whats-new">
+                        <p class="profile-links whats-new">
 
                             What's new?
                         </p>
