--- a/contribute.html
+++ b/contribute.html
@@ -12,14 +12,14 @@
     <script src="billiliteRange\bililiteRange\bililiteRange.undo.js"></script>
     <script src="billiliteRange\bililiteRange\bililiteRange.lines.js"></script>
     <script src="billiliteRange\bililiteRange\jquery.sendkeys.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="dependencies/bootstrap-5.2.3-dist/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="scripts/popup.js"></script>
+    <link rel="stylesheet" href="dependencies/bootstrap-5.2.3-dist/bootstrap-5.2.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Just Paste it!</title>
 </head>
 
 <body>
-    <script src="scripts/popup.js"></script>
 
     <div class="content-box main">
         <div class="card text-center container-1">
@@ -62,10 +62,6 @@
             </footer>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
-        </script>
 </body>
 
 </html>
