--- a/contribute.html
+++ b/contribute.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="jquery/jquery-3.6.1.min.js"></script>
+    <script src="dependencies/jquery/jquery-3.6.1.min.js"></script>
     <script src="scripts/script.js"></script>
     <script src="billiliteRange\bililiteRange\bililiteRange.js"></script>
     <script src="billiliteRange\bililiteRange\bililiteRange.undo.js"></script>
