Solve #8: Update version and update contribute text with better grammar

--- a/contribute.html
+++ b/contribute.html
@@ -34,12 +34,12 @@
             <div class="card-header">
                 <img src="images/B.gif" class="icon" alt="logo">
             </div>
-            <p class="team-info">This is our open source github repository.
+            <p class="team-info">This is our open-source GitHub repository.
                 <br>
-                If you have any new ideas feel free to contribute.
+                If you have any new ideas, please feel free to contribute.
                 <br><br>
-                We will be constantly updating and releasing new versions.
-                Contact us via linkedin if you find any bugs/issues.
+                We will be continuously updating and releasing new versions.
+                If you encounter any bugs or issues, please contact us via LinkedIn.
             </p>
             <div class="contribute-images">
                 <img src="images/github-contribute.png" id="github-contribute-icon" alt="">
