Add rating system

--- a/contribute.html
+++ b/contribute.html
@@ -37,7 +37,6 @@
             <p class="team-info">This is our open-source GitHub repository.
                 <br>
                 If you have any new ideas, please feel free to contribute.
-                <br><br>
                 We will be continuously updating and releasing new versions.
                 If you encounter any bugs or issues, please contact us via LinkedIn.
             </p>
@@ -45,6 +44,9 @@
                 <img src="images/github-contribute.png" id="github-contribute-icon" alt="">
                 <img src="images/hashcut-org.jpeg" id="hashcut-icon" alt="">
             </div>
+            <button
+                name="https://chromewebstore.google.com/u/2/detail/blend-run-enable-copy-and/ioebblnijghcghflgjlgbhjbdgkofcjp/reviews/my-review?hl=en"
+                type="button" class="btn btn-outline-dark links" id="contribute-btn">Rate Us!</button>
             <button name="https://github.com/HASHCUT69/Blend-n-Run" type="button" class="btn btn-outline-dark links"
                 id="contribute-btn">Contribute!</button>
             <footer class="text-muted1">
