--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <textarea class="form-control" id="content" placeholder="Enter Your Text/Code Here."></textarea>
                 <div>
                     <cite
-                        title="V1.0.0.3&#013;-Added Reviewing/Rating option&#013;v1.0.0.2&#013;-Added Mac Support&#013;(use ctrl+shift+x on Mac)&#013;-Added Visual Changes&#013;-Fixed minor bugs">
+                        title="V1.0.0.3&#013;-Added Reviewing/Rating option&#013;-General Bug Fixes&#013;v1.0.0.2&#013;-Added Mac Support&#013;(use ctrl+shift+x on Mac)&#013;-Added Visual Changes&#013;-Fixed minor bugs">
                         <p class="profile-links whats-new">
 
                             What's new?
