Change usage of the skip-rating link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                     <div class="model-text" id="dont-ask">
-                        Don't ask again.
+                        I already rated.
                     </div>
                 </div>
             </div>
